[gd_scene load_steps=2 format=3 uid="uid://drfdud6r6sf1j"]

[ext_resource type="Script" uid="uid://b4x570xyjpbhp" path="res://Interactables/ImportantItemIndicator.gd" id="1_13pxu"]

[node name="ImportantItemIndicator" type="VisibleOnScreenNotifier2D"]
script = ExtResource("1_13pxu")

[node name="Sprite2D" type="Sprite2D" parent="."]
top_level = true

[node name="Pivot" type="Node2D" parent="Sprite2D"]

[node name="Arrow" type="Polygon2D" parent="Sprite2D/Pivot"]
polygon = PackedVector2Array(0, -7, 1, 0, 0, 7, 6, 0)

[connection signal="screen_entered" from="." to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="." to="." method="_on_screen_exited"]
